<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search" translatable="false">Поиск</string>
    <string name="media" translatable="false">Медиатека</string>
    <string name="settings" translatable="false">Настройки</string>
    <string name="theme_dark" translatable="false">Темная тема</string>
    <string name="share" translatable="false">Поделиться приложением</string>
    <string name="support" translatable="false">Написать в поддержку</string>
    <string name="user_agreement" translatable="false">Пользовательское соглашение</string>
    <string name="share_text" translatable="false">Я учусь на курсе Android-разработки в Яндекс Практикуме: https://practicum.yandex.ru/android-developer/</string>
    <string name="support_subject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_text" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_url" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="support_email" translatable="false">apog2im@gmail.com</string>
    <string name="nothing_found" translatable="false">Ничего не нашлось</string>
    <string name="connection_error" translatable="false">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh" translatable="false">Обновить</string>
    <string name="search_history_title" translatable="false">Вы искали</string>
    <string name="search_history_clear" translatable="false">Очистить историю</string>
    <string name="player_back_button" translatable="false">Назад</string>
    <string name="player_add_to_playlist_button" translatable="false">Добавить в плейлист</string>
    <string name="player_favorite_button" translatable="false">Добавить в избранное</string>
    <string name="player_play_button" translatable="false">Воспроизвести</string>
    <string name="player_duration_label" translatable="false">Длительность</string>
    <string name="player_album_label" translatable="false">Альбом</string>
    <string name="player_year_label" translatable="false">Год</string>
    <string name="player_genre_label" translatable="false">Жанр</string>
    <string name="player_country_label" translatable="false">Страна</string>
    <string name="player_default_progress" translatable="false">00:30</string>
</resources>
