<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/panel_header_height"
        app:navigationIcon="@drawable/ic_arrow_back_full_24"
        app:navigationIconTint="?attr/colorOnSurface"
        app:title="@string/settings"
        app:titleTextAppearance="@style/TextAppearance.PlaylistMaker.Toolbar"
        app:titleTextColor="?attr/colorOnSurface"
        app:contentInsetStartWithNavigation="12dp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        style="@style/Widget.PlaylistMaker.MenuItem"
        android:layout_marginTop="@dimen/content_top_margin"
        android:checked="false"
        android:contentDescription="@null"
        android:text="@string/theme_dark" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/shareItem"
        style="@style/Widget.PlaylistMaker.MenuItem"
        android:drawableEnd="@drawable/ic_share_24"
        android:text="@string/share"
        app:drawableTint="@color/menu_item_icon_tint" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/supportItem"
        style="@style/Widget.PlaylistMaker.MenuItem"
        android:drawableEnd="@drawable/ic_support_24"
        android:text="@string/support"
        app:drawableTint="@color/menu_item_icon_tint" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/userAgreementItem"
        style="@style/Widget.PlaylistMaker.MenuItem"
        android:drawableEnd="@drawable/ic_arrow_forward_24"
        android:text="@string/user_agreement"
        app:drawableTint="@color/menu_item_icon_tint" />

</LinearLayout>
