<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/panel_header_height"
        app:contentInsetStart="@dimen/screen_horizontal_margin"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/TextAppearance.PlaylistMaker.Toolbar"
        app:titleTextColor="?attr/colorOnPrimary" />

    <Button
        android:id="@+id/search_button"
        style="@style/Widget.PlaylistMaker.Button.Main"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/content_top_margin"
        android:text="@string/search"
        app:icon="@drawable/ic_search_24" />

    <Button
        android:id="@+id/media_button"
        style="@style/Widget.PlaylistMaker.Button.Main"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/media"
        app:icon="@drawable/ic_media_24" />

    <Button
        android:id="@+id/settings_button"
        style="@style/Widget.PlaylistMaker.Button.Main"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="28dp"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings_24" />

</LinearLayout>
