<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/player_background"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/panel_header_height"
        app:navigationIcon="@drawable/ic_arrow_back_full_24"
        app:navigationIconTint="@color/player_primary_text" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/player_section_spacing">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/player_horizontal_margin"
            android:layout_marginEnd="@dimen/player_horizontal_margin"
            android:layout_marginTop="@dimen/player_cover_top_margin"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_placeholder_player_312"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.PlaylistMaker.PlayerArtwork" />

        <TextView
            android:id="@+id/trackName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/player_horizontal_margin"
            android:layout_marginEnd="@dimen/player_horizontal_margin"
            android:layout_marginTop="@dimen/player_section_spacing"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="start"
            android:maxLines="1"
            android:textColor="@color/player_primary_text"
            android:textSize="@dimen/text_size_large"
            android:letterSpacing="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cover" />

        <TextView
            android:id="@+id/artistName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/player_horizontal_margin"
            android:layout_marginEnd="@dimen/player_horizontal_margin"
            android:layout_marginTop="@dimen/player_compact_spacing"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="start"
            android:maxLines="1"
            android:textColor="@color/player_primary_text"
            android:textSize="@dimen/text_size_player_subinfo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trackName" />

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/player_controls_spacing"
            android:background="@android:color/transparent"
            android:contentDescription="@string/player_play_button"
            android:src="@drawable/ic_play_100"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/artistName" />

        <ImageButton
            android:id="@+id/addToPlaylistButton"
            style="@style/Widget.PlaylistMaker.Player.RoundControl"
            android:layout_marginStart="@dimen/player_controls_horizontal_padding"
            android:contentDescription="@string/player_add_to_playlist_button"
            android:src="@drawable/ic_add_to_playlist_51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/playButton"
            app:layout_constraintBottom_toBottomOf="@id/playButton" />

        <ImageButton
            android:id="@+id/favoriteButton"
            style="@style/Widget.PlaylistMaker.Player.RoundControl"
            android:layout_marginEnd="@dimen/player_controls_horizontal_padding"
            android:contentDescription="@string/player_favorite_button"
            android:src="@drawable/ic_favorite_51"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/playButton"
            app:layout_constraintBottom_toBottomOf="@id/playButton" />

        <TextView
            android:id="@+id/progressTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_spacing_small"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/player_default_progress"
            android:textColor="@color/player_primary_text"
            android:textSize="@dimen/text_size_player_subinfo"
            app:layout_constraintStart_toStartOf="@id/playButton"
            app:layout_constraintEnd_toEndOf="@id/playButton"
            app:layout_constraintTop_toBottomOf="@id/playButton" />

        <TextView
            android:id="@+id/durationLabel"
            style="@style/Widget.PlaylistMaker.Player.MetaLabel"
            android:layout_marginTop="@dimen/player_controls_spacing"
            android:text="@string/player_duration_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progressTime" />

        <TextView
            android:id="@+id/durationValue"
            style="@style/Widget.PlaylistMaker.Player.MetaValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/durationLabel"
            app:layout_constraintBottom_toBottomOf="@id/durationLabel" />

        <TextView
            android:id="@+id/albumLabel"
            style="@style/Widget.PlaylistMaker.Player.MetaLabel"
            android:layout_marginTop="@dimen/player_spacing"
            android:text="@string/player_album_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/durationLabel" />

        <TextView
            android:id="@+id/albumValue"
            style="@style/Widget.PlaylistMaker.Player.MetaValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/albumLabel"
            app:layout_constraintBottom_toBottomOf="@id/albumLabel" />

        <TextView
            android:id="@+id/yearLabel"
            style="@style/Widget.PlaylistMaker.Player.MetaLabel"
            android:layout_marginTop="@dimen/player_spacing"
            android:text="@string/player_year_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/albumLabel" />

        <TextView
            android:id="@+id/yearValue"
            style="@style/Widget.PlaylistMaker.Player.MetaValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/yearLabel"
            app:layout_constraintBottom_toBottomOf="@id/yearLabel" />

        <TextView
            android:id="@+id/genreLabel"
            style="@style/Widget.PlaylistMaker.Player.MetaLabel"
            android:layout_marginTop="@dimen/player_spacing"
            android:text="@string/player_genre_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/yearLabel" />

        <TextView
            android:id="@+id/genreValue"
            style="@style/Widget.PlaylistMaker.Player.MetaValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/genreLabel"
            app:layout_constraintBottom_toBottomOf="@id/genreLabel" />

        <TextView
            android:id="@+id/countryLabel"
            style="@style/Widget.PlaylistMaker.Player.MetaLabel"
            android:layout_marginTop="@dimen/player_spacing"
            android:text="@string/player_country_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genreLabel" />

        <TextView
            android:id="@+id/countryValue"
            style="@style/Widget.PlaylistMaker.Player.MetaValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/countryLabel"
            app:layout_constraintBottom_toBottomOf="@id/countryLabel" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
